feat: 基于 LLaVA 的 NuScenes 地图检测项目

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,111 @@
-# Python
-__pycache__
+# ============================================
+# Python 缓存与构建
+# ============================================
+__pycache__/
 *.pyc
-*.egg-info
-dist
+*.pyo
+*.egg-info/
+dist/
+build/
+*.eggs/
 
-# Log
+# ============================================
+# 预训练模型权重
+# ============================================
+llava-v1.5-7b/
+vicuna-7b-v1.5/
+blip2-opt-2.7b/
+clip-vit-large-patch14-336/
+
+# ============================================
+# 训练 Checkpoints
+# ============================================
+checkpoints/
+ckpts*/
+
+# ============================================
+# 数据集
+# ============================================
+data/
+
+# ============================================
+# 训练输出
+# ============================================
+outputs/
+output/
+
+# ============================================
+# 评估结果
+# ============================================
+eval_results/
+eval_results_epoch*/
+
+# ============================================
+# 日志与监控
+# ============================================
 *.log
 *.log.*
-*.json
-*.jsonl
+wandb/
 
-# Data
-!**/alpaca-data-conversation.json
+# ============================================
+# 模型权重/大型二进制文件（安全兜底）
+# ============================================
+*.bin
+*.safetensors
+*.h5
+*.pt
+*.pth
+*.pkl
+*.tgz
+*.tar.gz
+*.zip
 
-# Editor
-.idea
+# ============================================
+# 大型数据文件
+# ============================================
+detail_23k.json
+test_data.json
+
+# ============================================
+# 诊断/临时文件
+# ============================================
+qformer_diagnosis/
+
+# ============================================
+# 编辑器 / IDE
+# ============================================
+.idea/
+.vscode/
 *.swp
+*.swo
+*~
 
-# Other
-.DS_Store
-wandb
-output
-
-checkpoints
-ckpts*
-
-.ipynb_checkpoints
+# ============================================
+# Jupyter Notebook
+# ============================================
+.ipynb_checkpoints/
 *.ipynb
 
+# ============================================
+# 操作系统文件
+# ============================================
+.DS_Store
+Thumbs.db
+
+# ============================================
 # DevContainer
+# ============================================
 !.devcontainer/*
 
+# ============================================
 # Demo
+# ============================================
 serve_images/
+
+# ============================================
+# 白名单 - 需要保留的重要配置文件
+# ============================================
+# DeepSpeed 配置
+!scripts/zero2.json
+!scripts/zero3.json
+!scripts/zero3_offload.json
